--- a/src/index.css
+++ b/src/index.css
@@ -8,21 +8,25 @@
   }
 
   .week {
-    background-image: url(./assets/agenda.png);
+    background-image: url(./assets/agenda-back.png);
+    background-size: 100%;
     background-repeat: no-repeat;
     background-size: cover;
   }
 }
 
-
-#myTextarea{
-  white-space: pre-wrap !important;
+#topic::-webkit-scrollbar{
+  width: 0;
 }
 
-@media screen, print {
-  #myTextarea {
+@media print {
+  .week {
     height: auto !important;
-    max-height: none !important;
-    white-space: pre-wrap !important;
+  }
+}
+
+@media print {
+  @page {
+    size: 240mm 350mm;
   }
 }
