added academy logos

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   }
 
   .week {
-    background-image: url(./assets/agenda-back.png);
+    background-image: url(./assets/week-back.png);
     background-size: 100%;
     background-repeat: no-repeat;
     background-size: cover;
